# SE_FastAPI_Example

./: .gitignore  pyproject.toml
app/: main.py
app/routes/: classifier.py
models/: Item.py
